--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Builders Rolodex - Helps you find the construction help you need."
     />
     <link
       rel="stylesheet"
